# vsCANView

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package-lock.json  vs-extension.rar
conf/: config.ini
include/bus/: can_channel.hpp  pcan_channel.hpp  socket_can_channel.hpp
include/config/: config_loader.hpp
include/dbc/: dbc_database.hpp
include/display/: can_tui.hpp
include/mqtt/: mqtt_publisher.hpp
include/task/: display_task.hpp  init_task.hpp  listener_task.hpp  periodic_task.hpp  task_macros.hpp
include/util/: json_utils.inl  util.hpp
src/: can_tui.cpp  dbc_database.cpp  main.cpp  socket_can_channel.cpp
src/bus/: can_channel_factory.cpp  pcan_channel.cpp  socket_can_channel.cpp
src/config/: config_loader.cpp
src/dbc/: dbc_database.cpp
src/display/: display_task.cpp
src/mqtt/: mqtt_publisher.cpp
src/task/: init_task.cpp  listener_task.cpp  periodic_task.cpp
test/: sim_can.sh
toolchains/: raspi.cmake
vs-extension/: .test_require.js  extension.js  package-lock.json  package.json
vs-extension/media/: app.js  app_temp.js  full.html  importmap.json  index.html  temp.html  vehicle.glb
vs-extension/media/css/: dashboard.css  dashboard.css.addon  fonts.css  signals.css  temp.css  vscode-compat.css
vs-extension/media/js/: app.js  app_temp.js  seed.mjs
vs-extension/media/js/charts/: arcGauge.js  areaMultiChart.js  chartCore.js  engineGauges.js  fuelRateChart.js  gpsChart.js  multiSignalChart.js  multiSignalChart.js.bak  multiSignalChart.js.bak2  pressureChart.js  rpmChart.js  speedChart.js  tempGauges.js
vs-extension/media/js/core/: chartCore.js  jsonTree.js
vs-extension/media/js/dbc/: dbc.js  mapping.json
vs-extension/media/js/maps/: navMap.js  osmTiles.js
vs-extension/media/js/three/: vehicleViewer.js  vehicleViewer_new.js
vs-extension/src/: extension.ts
vs-extension/src/utils/: canDecode.ts  canUtils.js
vs-extension/test/: parseTest.js  testData.js
vs-extension/tools/: copy-three.js
